# Triumvirate_LLMbot

./: .coverage  .env.example  .gitignore  About.md  BUGFIX_PLAN.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_CHAT.md  EVALUATION_AGENTS_GUIDE.md  GO 5 Bots — копия.bat  GO 5 Bots.bat  LLM_report.md  MULTI_BOT.md  OPTIMIZATION_ROADMAP.md  PROMPT_OPTIMIZATION_PLAN.md  README.md  TESTING_GUIDE.md  arena_client.py  bot_runner.py  claude_start.bat  code_review_report.md  constants.py  free models.txt  go.sh  gui — копия.py  gui.py  gui_helpers.py  llm_bot_gui_settings_v2 — копия.json  llm_bot_gui_settings_v2.json  llm_client.py  main.py  models_pool — копия.json  models_pool.json  move_parser.py  multi_bot.py  notation_converter.py  pricing.py  prompt_builder.py  pyproject.toml  requirements.txt  (+10 more)
.claude/: settings.local.json
.claude/agents/: chess-strategy-analyst.md  docs-keeper.md  model-evaluator.md  prompt-optimizer.md  (+1 more)
plans/: bugreport_2026-03-19.md  implementation_plan.md  multi-agent-evaluation-system.md  smartbot_evaluation_integration.md  smartbot_remaining_todo.md  test-scenarios.md  ticket_token_persistence.md  trace-evaluation-agent.md
prompts/: chat_instructions.txt  format_json.txt  format_json_thinking.txt  format_simple.txt  response_format.txt  system_prompt.txt  user_prompt_template.txt
tests/: conftest.py
trace_analyzer/: About.md  aggregator.py  app.py  data_loader.py  export_utils.py  metrics.py  move_metrics.py  smartbot_adapter.py  smartbot_evaluator.py
tri/: новая нотация - версия 6 исправления нотации центра.txt  эталонная геометрии номер 2.txt
(+383 files in other folders)
